--- a/guide/Methods.tex
+++ b/guide/Methods.tex
@@ -9,7 +9,7 @@ From this point onwards, this guide makes the following assumptions:
 
 \subsection{Loading Data}
 3D Slicer can load data in two different ways.
-Loading data from file or folder or load data from folder and save to database. %\ref{fig:toolbar}:2)
+Loading data from file or folder or load data from folder and save to database (\ref{fig:toolbar}:2).
 The database option is advisable if you are dealing with a larger number of studies, as it enables quick switching between studies.
 If only a single study needs to be loaded, usage of the database is not necessary.
 Clicking on the \texttt{Add Data} Button (\ref{fig:toolbar}:2) or using the keyboard shortcut \texttt{Ctrl + o} brings up a file picker dialogue.
@@ -49,15 +49,15 @@ Save your work in 3D Slicer by clicking on the \texttt{Save Data} button in the 
 This will open a popup window which holds information about what data will be saved and the format it will be saved to.
 3D Slicer defaults to bundling up your data into a single file. Change this by clicking on the bundle icon (\cref{fig:save}:1) and set a checkmark at \texttt{Show options} (\cref{fig:save}:2).
 The window should now look like \Cref{fig:save}.
-The first collumn shows the file names, which are derived from their names in the \texttt{Data} module and their file format.
+The first column shows the file names, which are derived from their names in the \texttt{Data} module and their file format.
 
-Lets take a look at what 3D Slicer is going to save:
+Let us take a look at what 3D Slicer is going to save:
 
 \begin{description}
 	\item [post-Scene.mrml] \textquote{MRML file is a xml-formatted text file with scene metadata and pointers to externally stored data files}\cite{kikinis3DSlicerPlatform2014} (Metadata file)
-	\item [my\_Volume\_BG\_removed.nrrd] volume data in a non-DICOM general purpose multi-dimensional format
-	\item [VolumeProperty.vp] volume property file storing information on volume rendering (Metatdata file)
-	\item [Segmentation.seg.nrrd] \textquote{Segmentation labelmap representation}\cite{kikinis3DSlicerPlatform2014} storing the segmentation as a multi dimensional volume
+	\item [my\_Volume\_BG\_removed.nrrd] volume data in a non-DICOM general purpose multidimensional format
+	\item [VolumeProperty.vp] volume property file storing information on volume rendering (Metadata file)
+	\item [Segmentation.seg.nrrd] \textquote{Segmentation labelmap representation}\cite{kikinis3DSlicerPlatform2014} storing the segmentation as a multidimensional volume
 \end{description}
 
 3D Slicer defaults to compressing all data before saving and there should be no reason to turn this behavior off.
@@ -107,7 +107,7 @@ See \cref{fig:cMP} for reference.
 Under \texttt{IO -> Input Volume} make sure the dataset you loaded is selected.
 Create a new ROI under \texttt{IO -> Input ROI} choose \texttt{Create new ROI as\ldots} and give it a distinctive name. Also make sure it is not hidden by looking for an open eye next to \texttt{Display ROI}.
 Next choose a name for your output volume under \texttt{IO -> Output volume -> Create new volume as\ldots} and give it a distinctive name.
-Under \texttt{Advanced -> Fill value} choose a HU value for everything outside your ROI. It should be easily distinguishable from the structure or tissue you are segmenting. For bone segmentation I recommend choosing -1000 HU\footnote{The HU value of air}. Checking the tickbox \texttt{Advanced -> Interpolated cropping} will ensure that the output volume has the same dimensions as the input volume.
+Under \texttt{Advanced -> Fill value} choose a HU value for everything outside your ROI. It should be easily distinguishable from the structure or tissue you are segmenting. For bone segmentation I recommend choosing -1000 HU\footnote{The HU value of air}. Checking the tick box \texttt{Advanced -> Interpolated cropping} will ensure that the output volume has the same dimensions as the input volume.
 %%TODO: detour about compression???
 Also check the box: \texttt{Advanced -> Isotropic spacing} with a \texttt{Spacing scale} of 1x to ensure the voxels stay isotropic.
 Now adjust your ROI in the 2D view areas by clicking and dragging the colored dots at the edges and corners of the ROI.
@@ -138,7 +138,7 @@ Show your cropped volume by clicking on the closed eye on the same line as its n
 
 \subsubsection{Masking}\label{mask}
 In the last step we cropped out the part of the source volume which does not contain any material/tissue of interest.
-This step is dedicate to homogenizing the volume which was not cropped out in the last step.
+This step is dedicated to homogenizing the volume which was not cropped out in the last step.
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -152,7 +152,7 @@ Make sure your cropped volume is selected as the \texttt{Source volume} (see: \c
 Click on the \texttt{+ Add} button (\cref{fig:tM}:3). You should see a new segment appear in the segments list below.
 Double click to rename it to ``Background'' or leave its default name.
 Make sure your ``Background''segment is select and then activate the \texttt{Threshold} tool (\cref{fig:tM}:4).
-Shift the lower threshold limit until the background is covered by the segment color in the 2D views. Afterwards shift the upper threshold limit until your tissue of interest is definitely no longer covered by the segment color.
+Shift the lower threshold limit until the background is covered by the segment color in the 2D views. Afterward shift the upper threshold limit until your tissue of interest is definitely no longer covered by the segment color.
 Before applying (\cref{fig:tM}:7) the threshold segmentation make sure that 3D Slicer is allowed to edit \texttt{Everywhere} and overwrite all other segments (see: \cref{fig:tM}:6).
 
 \pagebreak
@@ -170,21 +170,21 @@ This tool provides a simple way of selecting materials and tissue that are not e
 Change its operation mode to \texttt{Fill inside} (\cref{fig:sM}:2) and its shape to \texttt{Rectangle} or \texttt{Free-form} (\cref{fig:sM}:3).
 In the 2D views you can now click and drag to create a shape, upon releasing the left mouse button the tool will add the volume inside the shape to your ``Background'' segment.
 \newline % sample hint
-\newline
+\newline % 2d, 3d, hint, irr, perf, plugin
 \begin{minipage}{0.4\textwidth}
 	\begin{center}
 		\includesvg[
 			inkscapelatex=false,
-			width = 0.6\textwidth
+			width = 0.5\textwidth
 		]{hint.svg}
 	\end{center}
 \end{minipage}%
 %
 \begin{minipage}{0.5\textwidth}
-	The scissors tool ``punches'' through the volume, this makes it very easy to accidentally select something intentionally. Always make sure there is no ROI in the area on the previous or next slices and check your positioning on the other planes. In most cases it will be easier to work on small sections of your volume, rather than selecting a large volume in one single step.
+	The scissors tool ``punches'' through the volume, this makes it very easy to accidentally select something intentionally.
+	Always make sure there is no ROI in the area on the previous or next slices and check your positioning on the other planes.
+	In most cases it will be easier to work on small sections of your volume, rather than selecting a large volume in one single step.
 \end{minipage}
-\newline
-\newline % sample hint
 
 \pagebreak
 \begin{figure}[h!]
@@ -207,7 +207,7 @@ For the result, create a new volume by clicking on \texttt{Output Volume -> Crea
 	\begin{center}
 		\includesvg[
 			inkscapelatex=false,
-			width = 0.6\textwidth
+			width = 0.5\textwidth
 		]{irreversible.svg}
 	\end{center}
 \end{minipage}%
@@ -216,8 +216,6 @@ For the result, create a new volume by clicking on \texttt{Output Volume -> Crea
 	Always create a new volume when working with the \texttt{Mask volume} tool.
 	It overrides the individual voxel intensity values, this \emph{can not be undone} as 3D Slicer does not store the original intensity values in its undo history.
 \end{minipage}
-\newline
-\newline % sample hint
 \pagebreak
 
 \subsubsection{Cleanup}
@@ -232,15 +230,15 @@ Switch to the \texttt{Data} module.
 \end{figure}
 \noindent
 Here we see all the items we have created so far.
-\Cref{fig:clr}:1 is the dicom dataset from the MicroCT scanner.
+\Cref{fig:clr}:1 is the DICOM dataset from the MicroCT scanner.
 \Cref{fig:clr}:2 is the cropping ROI created in \cref{crop} and \cref{fig:clr}:3 is the volume that resulted from the cropping operation.
 The segmentation item (\cref{fig:clr}:4) holds all segmentations created in the \texttt{Segment Editor} module. So far it only holds the ``Background'' segment created in \Cref{mask}. And the final item (\cref{fig:clr}:5) is the most recent volume resulting from the \texttt{Mask volume} operation.
-Items \cref{fig:clr}:1-4 can be deleted to save Harddrive space and RAM while working in 3D Slicer.
+Items \cref{fig:clr}:1-4 can be deleted to save harddrive space and RAM while working in 3D Slicer.
 \noindent
-In this example the data volume on disk could be decreased from 309 megabytes to (source dicom data) to 15 megabytes.
+In this example the data volume on disk could be decreased from 309 megabytes to (source DICOM data) to 15 megabytes.
 Which equates to approximately a 95\% reduction in file size.
 As a result of this, 3D Slicers RAM consumption has dropped from 1.3 gigabytes to 585 megabytes, which equates to approximately 55\% reduction.
-See \Cref{measuements:memComp} for more information.
+See \Cref{measurements:memComp} for more information.
 \begin{figure}
 	\begin{tikzpicture}
 		\begin{axis}[
@@ -268,14 +266,14 @@ See \Cref{measuements:memComp} for more information.
 
 \section{Segmentation tools}
 With your dataset loaded and prepared switch to the \texttt{Segmentation Editor} module.
-Before you start to segment \emph{ALLWAYS} make sure the masking options are set correctly.
+Before you start to segment \emph{ALWAYS} make sure the masking options are set correctly.
 \begin{description}
 	\item [Editable area] which areas are affected by your tool
 	      \begin{description}
 		      \item [Everywhere] no restrictions, tool is usable anywhere in the view areas
 		      \item [Inside all segments] tool can overwrite any existing segment, does not work outside of segments
 		      \item [Inside all visible segments] tool can overwrite any existing segment that is not hidden, does not work outside of segments
-		      \item [Outside all segments] inverse of \texttt{Inside all segments}, tool works only outside of existing segments
+		      \item [Outside all segments] inverse of \texttt{Inside all segments}, tool works only outside existing segments
 		      \item [Outside all visible segments] inverse of \texttt{Inside all visible segments}, tool works only outside existing non-hidden segments
 		      \item [Inside \texttt{user created segments}] tool can override only selected existing segment, does not work outside of segment
 	      \end{description}
@@ -321,14 +319,29 @@ Before you start to segment \emph{ALLWAYS} make sure the masking options are set
 Selected by default. Enables inspection of 2D and 3D views without accidentally modifying a segmentation.
 \pagebreak
 \subsubsection{Paint}\label{section:paint}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{3d.svg}
+	\end{subfigure}
+\end{figure}
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
 			% scale=0.2
 			width=0.90\paperwidth
-		]{paint1.png}}
+		]{paint.png}}
 	\caption{Paint tool}\label{fig:paint}
 \end{figure}
+
 \noindent
 The \texttt{Paint} tool is the most widely applicable manual segmentation tool. It is also the basis for most semi-automatic segmentation tools.
 To get started, first make sure the correct volume dataset and segmentation dataset are loaded (\cref{fig:paint}:1).
@@ -341,11 +354,30 @@ Left-click and drag to draw, Shift+Mouse wheel to change the brush size, Ctrl+mo
 \Cref{fig:paint}:4 displays the brush size modification options, click and drag the slider to increase the brush size, alternatively click one of the size presets.
 In most cases setting the brush size via this menu will be not necessary, instead use the keyboard shortcuts.
 Keeping the mouse in the view area during segmentation enforces a non-disruptive workflow.
+Make the \texttt{Paint} tool affect more than one slice by making the brush spherical (\cref{fig:paint}:5).
+The sphere brush can also be used in the 3D view if enabled (\cref{fig:paint}:6).
+If you wish to allow overlapping segments, enable \texttt{Color smudge} (\cref{fig:paint}:7).
+
 \pagebreak
 \subsubsection{Erase}
-Erase segmetation with brush. Inverse of Paint tool, for usage see \cref{section:paint}.
+Erase segmentation with brush. Inverse of Paint tool, for usage see \cref{section:paint}.
 
-\subsubsection{Grow from seeds}
+\subsubsection{Grow from seeds}\label{section:gfs}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{performance.svg}
+	\end{subfigure}
+\end{figure}
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -354,8 +386,6 @@ Erase segmetation with brush. Inverse of Paint tool, for usage see \cref{section
 		]{growFromSeeds.png}}
 	\caption{Grow from seeds tool}\label{fig:gfs}
 \end{figure}
-
-% TODO: insert performance warning, insert performance tip (crop)
 \noindent
 Semi-automatic segmentation tool based on seeds and distinctive HU changes.
 To get started create at least two segments (\cref{fig:gfs}:1), one for the ``Background'' and one for the actual segmentation.
@@ -367,13 +397,24 @@ Change the opacity of the preview via the slider (\cref{fig:gfs}:4) or display i
 The first iteration will most likely be not satisfactory.
 Turn of \texttt{Auto-update} (\cref{fig:gfs}:3), switch back to the \texttt{Paint} tool and add more seeds in all areas \texttt{Grow from seeds} segmented incorrectly or not at all.
 Switch back to \texttt{Grow from seeds} and click \texttt{update}.
-If the segmentation does not grow enough or grows overproportionally, change the seed location modifier (\cref{fig:gfs}:5).
+If the segmentation does not grow enough or grows disproportionate, change the seed location modifier (\cref{fig:gfs}:5).
 Increasing the modifier forces the segmentation to be more localized and vice versa.
 Repeat this cycle of adding seeds and letting the segmentation update until the segmentation is satisfactory.
 Click apply to confirm the segmentation, delete the ``Background'' segment if its no longer useful.
+
 \pagebreak
 
 \subsubsection{Margin}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+\end{figure}
+
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -392,6 +433,16 @@ Or it can be used to separate two segments which have some overlap by shrinking 
 \pagebreak
 
 \subsubsection{Smoothing}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+\end{figure}
+
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -415,6 +466,22 @@ Undo if the result is not satisfactory, increase the kernel by a small amount an
 
 \pagebreak
 \subsubsection{Islands}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{3d.svg}
+	\end{subfigure}
+\end{figure}
+
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -429,12 +496,29 @@ Multitool operating on disconnected segmentation areas or connected segmentation
 	\item [Keep largest island] deletes all islands but the largest one
 	\item [Remove small islands] deletes all islands smaller than the specified minimum size
 	\item [Split islands to segments] deletes all islands smaller than the specified minimum size, the remaining islands will be automatically assigned a new segment each
-	\item [Keep selected island] click on a island you wish to keep, all other islands will be deleted
-	\item [Remove selected island] click on a island you wish to delete, all other islands will be unaffected
-	\item [Add selected island] click on a island you wish to join with the selected segment, it will inherit the label of the segment
+	\item [Keep selected island] click on an island you wish to keep, all other islands will be deleted
+	\item [Remove selected island] click on an island you wish to delete, all other islands will be unaffected
+	\item [Add selected island] click on an island you wish to join with the selected segment, it will inherit the label of the segment
 \end{description}
 \pagebreak
-\subsubsection{Mask volume}
+
+\subsubsection{Mask volume}\label{section:mask}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{irreversible.svg}
+	\end{subfigure}
+\end{figure}
+
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -444,8 +528,36 @@ Multitool operating on disconnected segmentation areas or connected segmentation
 	\caption{Mask volume tool}\label{fig:mv}
 \end{figure}
 
+\noindent %TODO: insert warning
+Tool to overwrite parts of a volume.
+To get started, create and select a segment you wish to modify (\cref{fig:mv}:1).
+The segment can for example be the background you wish to blank out.
+Or it can be an object or organ you wish to blank out or preserve.
+In the example \Cref{fig:mv} \texttt{Mask volume} was used to blank out the background, some support structures and just preserve the scanned animal.
+This was achieved by using the \texttt{Threshold} tool (\cref{section:threshold}) to segment the air.
+Then the \texttt{Scissors} tool (\cref{section:scissors}) was used to segment the positioning and support structures.
+Next, select an operation mode (\cref{fig:mv}:2) and fill value (\cref{fig:mv}:3).
+\begin{description}
+	\item [Fill inside] fill volume inside selected segment with \texttt{Fill value}
+	\item [Fill outside] fill volume outside selected segment with \texttt{Fill value}
+	\item [Fill inside and outside] takes two fill values (inside and outside), fill volume inside selected segment with \texttt{Fill value inside} and volume outside selected segment with \texttt{Fill value outside}
+\end{description}
+The tool can also smooth the edge between segments with a blur. Increase the \texttt{Soft edge} (\cref{fig:mv}:4) value above zero.
+Before applying the operation, make sure the correct \texttt{Input Volume} is selected and create a \texttt{Output Volume}.
 
-\subsubsection{Threshold}
+
+\pagebreak
+\subsubsection{Threshold}\label{section:threshold}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+\end{figure}
+
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -454,10 +566,30 @@ Multitool operating on disconnected segmentation areas or connected segmentation
 		]{threshold.png}}
 	\caption{Threshold tool}\label{fig:threshold}
 \end{figure}
+\noindent
+Segment by HU value range.
+First, select the segment to threshold (\cref{fig:threshold}:1).
+Next, pick a lower (\cref{fig:threshold}:2) and upper (\cref{fig:threshold}:3) limit either by clicking and dragging the sliders or by typing in the HU values manually.
+A dynamically updated preview will be available in the 2D views.
+\Cref{Automatic threshold} algorithms (\cref{fig:threshold}:4) can be used to determine the limits but in most cases clicking and dragging the slider will be faster.
+Your may want to see a histogram of a ROI and pick your lower and upper limit from the histogram (\cref{fig:threshold}:5).
+In order to do that, pick a ROI shape and click and drag it in a 2D view area.
+Click on the histogram to choose your limits.
+If you do not want to save your threshold to a segment but intend to use it for masking with the \texttt{Paint} tool, click on \texttt{Use for masking} (\cref{fig:threshold}:6).
+This will activate the \texttt{Paint} tool with your threshold limits set as the masking option.
+
+\pagebreak
+\subsubsection{Draw}\label{section:draw}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+\end{figure}
 
 
-
-\subsubsection{Draw}
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -466,10 +598,23 @@ Multitool operating on disconnected segmentation areas or connected segmentation
 		]{draw.png}}
 	\caption{Draw tool}\label{fig:draw}
 \end{figure}
+\noindent
+Simple drawing tool.
+Make sure the correct segment is selected (\cref{fig:draw}:1).
+Click on a 2D view to create points, double click to connect the last point with the first point.
+The encompassed area will be filled in (\cref{fig:draw}:3).
 
-
-
+\pagebreak
 \subsubsection{Level tracing}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+\end{figure}
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -478,22 +623,58 @@ Multitool operating on disconnected segmentation areas or connected segmentation
 		]{levelTracing.png}}
 	\caption{Level tracing tool}\label{fig:lT}
 \end{figure}
+\noindent
+\texttt{Level tracing} has a similar role as the \texttt{Draw} tool (\cref{section:draw}).
+But instead of manually defining points and connecting them, the tool automatically tries to find areas of similar intensities.
+Hover your mouse over a 2D view to see the outline of an area, click to confirm (\cref{fig:draw}:2).
 
-
-
+\pagebreak
 \subsubsection{Fill between slices}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{performance.svg}
+	\end{subfigure}
+\end{figure}
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
 			% scale=0.2
-			width=0.90\paperwidth
+			width=0.80\paperwidth
 		]{fillSlices.png}}
 	\caption{Fill between slices tool}\label{fig:fS}
 \end{figure}
+\noindent
+\texttt{Fill between slices} is used similar to \texttt{Grow from seeds} (\cref{section:gfs}).
+Start by creating at least one segment and segment a slice with a manual tool.
+Skip at least one slice and segment the next slice.
+Repeat the last 2 steps until you have covered the desired segmentation volume.
+Click on \texttt{Initialize} (\cref{fig:fS}:2) and wait for the interpolation preview to appear in the 2D view area.
+The first segmentation will most likely not satisfactory.
+Deactivate \texttt{Auto-update} (\cref{fig:fS}:3), switch to the \texttt{Paint} tool and manually paint over the slices with inaccuracies.
+Switch back to the \texttt{Fill between slices} tool and click \texttt{Update}.
+Repeat until the segmentation is satisfactory.
 
-
-
+\pagebreak
 \subsubsection{Hollow}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+\end{figure}
+
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
@@ -502,62 +683,246 @@ Multitool operating on disconnected segmentation areas or connected segmentation
 		]{hollow.png}}
 	\caption{Hollow tool}\label{fig:hollow}
 \end{figure}
+\noindent
+Hollows out a segment (\cref{fig:hollow}:4) by replacing it with a border of a specified thickness (\cref{fig:hollow}:3).
+To use this tool, select the desired segment (\cref{fig:hollow}:1), select if the segment should represent the \texttt{inside}, \texttt{medial} or \texttt{outside} border.
+Finally set the border thickness (\cref{fig:hollow}:3) and click apply.
 
+\pagebreak
+\subsubsection{Scissors}\label{section:scissors}
+\begin{figure}[h]
+	\begin{subfigure}{0.2\textwidth}
+		\includesvg[
+			inkscapelatex=false,
+			width = 0.3\textwidth
+		]{2d.svg}
+	\end{subfigure}
+\end{figure}
 
-
-\subsubsection{Scissors}
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
 			% scale=0.2
-			width=0.90\paperwidth
+			width=1.1\textwidth
 		]{scissors.png}}
 	\caption{Scissors tool}\label{fig:scissors}
 \end{figure}
+\noindent
+\texttt{Scissors} can be used to cut or fill through a segment.
+Select a segment to cut (\cref{fig:scissors}:1).
+Pick a mode of operation (\cref{fig:scissors}:2).
+\begin{description}
+	\item [Erase inside] erases already segmented area inside ROI
+	\item [Erase outside] erases already segmented area outside ROI
+	\item [Fill inside] fills ROI with segment label
+	\item [Fill outside] fills everything but the ROI with segment label
+\end{description}
+Pick a ROI shape (\cref{fig:scissors}:3). \texttt{Centered} means that the ROI will not be drawn from its edge but the center, this may be useful for drawing circular ROIs.
+Finally, choose which slices should be affected by the \texttt{Scissors} tool (\cref{fig:scissors}:4).
+\begin{description}
+	\item [Unlimited] affect all slices
+	\item [Positive] only affect slices with a higher slice number than the current one
+	\item [Negative] only affect slices with a lower slice number than the current one
+	\item [Symmetric] affect both higher and lower slices numbers but only a specific distance
+\end{description}
 
-
+\pagebreak
 
 \subsubsection{Logical operators}
 \begin{figure}[h!]
 	\centerline{
 		\includegraphics[
 			% scale=0.2
-			width=0.90\paperwidth
+			width=1.1\textwidth
 		]{bool.png}}
 	\caption{Logical operators tool}\label{fig:bool}
 \end{figure}
-
-
+\noindent
+Boolean operators processing up to two segments at a time.
+First, make sure the correct segment is selected (\cref{fig:bool}:1).
+Pick an operation (\cref{fig:bool}:2).
+\begin{description}
+	\item [Copy] copy the segmentation of the modifier segment to the active segment, effectively replacing its segmentation
+	\item [Add] combine active and modifier segment
+	\item [Subtract] remove overlapping parts of the modifier segment from the active segment
+	\item [Intersect] only keep overlapping parts of the modifier segment and the active segment
+	\item [Invert] invert the active segment
+	\item [Clear] clear the active segment, the same can be achieved via the right click menu and selecting \texttt{Clear selected segments}
+	\item [Fill] fill the whole volume with the active segment
+\end{description}
+Finally, if applicable, pick the modifier segment (\cref{fig:bool}:3) and click apply.
 
 \subsubsection{Undo and Redo}
-
+Undo and Redo work the same as just about in any other software.
+The only caveats are that 3D slicer allows only 9 undo operations and that some operations can not be undone (see: \cref{section:mask})
+\pagebreak
 
 \subsection{Additional segmentation tools}
+Some tools are not included with the download of 3D Slicer.
+There can be several reasons for this.
+Some may not be considered stable enough yet.
+Some may have considerable overlap in their usecase with a built-in tool.
+And some may just not fit 3D Slicers development direction.
+Fortunately, 3D Slicer provides a API which enables the development of extensions.
+One such extension is \textquote{SlicerSegmentEditorExtraEffects}\cite{lassoSlicerSegmentEditorExtraEffects2024} by Andras Lasso.
+This extension expands the tool section in the \texttt{Segmentation Editor} module with the following tools:
+\begin{figure}[h]
+	\begin{minipage}{0.4\textwidth}
+		\centering
+		\includegraphics[scale=0.6]{segEE.png}
+		\caption{SlicerSegmentEditorExtraEffects}\label{segEE}
+	\end{minipage}%
+	%
+	\begin{minipage}{0.5\textwidth}
+		\begin{enumerate} % https://github.com/lassoan/SlicerSegmentEditorExtraEffects
+			\item \texttt{Draw Tube}
+			\item \texttt{Engrave}
+			\item \texttt{Fast Marching}
+			\item \texttt{Flood Filling}
+			\item \texttt{Split Volume}
+			\item \texttt{Surface Cut}
+			\item \texttt{Watershed}
+			\item \texttt{Local Threshold}
+		\end{enumerate}
+	\end{minipage}
+\end{figure}
+\mbox{}
 
-\subsection{Performing segmentations}
+\noindent
+Install the extension by clicking on the \texttt{Extensions Manger} in the toolbar (see: \cref{fig:toolbar}:10).
+In the newly opened window, click on \texttt{Install Extensions}, then use the search bar to find ``SegmentEditorExtraEffects''.
+Click install and wait for 3D Slicer to ask you for a restart.
+The extra tools will be available after restarting 3D Slicer.
+
+\pagebreak
+\subsubsection{Draw tube}\label{section:dt}
+% TODO: 2d, 3d
+\begin{figure}[h!]
+	\centerline{
+		\includegraphics[
+			% scale=0.2
+			width=1.1\textwidth
+		]{drawTube.png}}
+	\caption{Draw tube tool}\label{fig:tube}
+\end{figure}
+\noindent
+Draws a tube of fixed radius along a path of points.
+First, make sure the desired segment is selected.
+Click on \texttt{Place a control point} (\cref{fig:tube}:1) to start drawing.
+Create as many control points as you need by clicking on your volume in the 2D or 3D views.
+Exit the point creation mode by double left-clicking on the last point or right clicking anywhere in the view area.
+The points can now still be moved freely by clicking and dragging them around.
+If you wish to delete the last added point, click on the thrashcan icon (\cref{fig:tube}:2).
+Pick a tube radius in millimeters and a interpolation algorithm (\cref{fig:tube}:5) by experimenting with the available options and reviewing changes in the preview (\cref{fig:tube}:4).
+Click \texttt{Apply} to confirm your changes (\cref{fig:tube}:6).
+The result however can still be changed by clicking \texttt{Edit} (\cref{fig:tube}:3).
+
+\pagebreak
+\subsubsection{Engrave}
+% TODO: 2d, 3d
+\begin{figure}[h!]
+	\centerline{
+		\includegraphics[
+			% scale=0.2
+			width=1.1\textwidth
+		]{engrave.png}}
+	\caption{Engrave tool}\label{fig:eng}
+\end{figure}
+\noindent
+Draws or carves out text on a segments surface.
+First insert your desired text string (\cref{fig:eng}:1).
+Next, click on \texttt{Place a control point} (\cref{fig:eng}:2) and place your text by clicking on the desired position in either the 2D or 3D view area.
+Change size and location by selecting either (see: \cref{fig:eng}:3) and manipulating the text in the view area.
+Change the depth of penetration in millimeters by entering a value or dragging the slider (\cref{fig:eng}:4).
+Finally choose an operation mode (\cref{fig:eng}:5):
+\begin{description}
+	\item [Engrave] carve the text out of an existing segment, requires prior segmentation
+	\item [Emboss] stamp the text on a segment, requires no prior segmentation
+\end{description}
+
+\pagebreak
+\subsubsection{Fast Marching}
+Works similar to \texttt{Grow from seeds} (\Cref{section:gfs}) with the big difference that it does not need a ``Background'' segment and can be used on a single segment at a time.
+\texttt{Fast Marching} is also considerably faster than \texttt{Grow from seeds}
+\texttt{Maximum volume} refers to relative amount of your dataset \texttt{Fast Marching} will try to segment.
+Control segmentation leakage via the \texttt{Segment volume} slider.
+
+\pagebreak
+\subsubsection{Flood Filling}
+\textquote{Add to the current segment all similar intensity voxels near the clicked position. Generally "Local threshold" effect is recommended instead of this effect because this effect often either cannot prevent leaking into other structures or provides incomplete segmentation.}\cite{lassoSlicerSegmentEditorExtraEffects2024}
+This tool has been found to be unreliable and tends to crash often.
+
+\pagebreak
+\subsubsection{Split Volume}
+\begin{figure}[h!]
+	\centerline{
+		\includegraphics[
+			% scale=0.2
+			width=1.1\textwidth
+		]{split.png}}
+	\caption{Split volume tool}\label{fig:split}
+\end{figure}
+\noindent
+Creates a new volume for each segment and requires at least two existing segments.
+Start by segmenting parts of your dataset that you wish to split (\cref{fig:split}:1).
+Make sure to select the correct input volume (\cref{fig:split}:2).
+Set the amount of padding voxels around each segment (\cref{fig:split}:3) and the fill value outside the segmentation (\cref{fig:split}:4).
+After clicking \texttt{Apply} the \texttt{Data} module will show some new volumes according to the number of segments you split.
+
+\pagebreak
+\subsubsection{Surface Cut}
+\begin{figure}[h!]
+	\centerline{
+		\includegraphics[
+			% scale=0.2
+			width=1.1\textwidth
+		]{surfaceCut.png}}
+	\caption{Surface cut tool}\label{fig:sc}
+\end{figure}
+\noindent
+Works similar to \texttt{Draw tube} (see: \Cref{section:dt}) and \texttt{Scissors} (see: \Cref{section:scissors}).
+Start by creating fiducial markers (\cref{fig:sc}:1) in the 2D or 3D views (\cref{fig:sc}:2).
+Exit fiducial creation mode by either double clicking on the last fiducial or right clicking anywhere in the view area.
+Modify fidicual placement by clicking and dragging them to the desired position.
+Choose an operation mode:
+\begin{description}
+	\item [Erase inside] erases already segmented area inside fiducial volume
+	\item [Erase outside] erases already segmented area outside fiducial volume
+	\item [Fill inside] fills fiducial volume with segment label
+	\item [Fill outside] fills everything but the fiducial volume with segment label
+	\item [Set] fills fiducial volume with segment label
+\end{description}
+
+\pagebreak
+\subsubsection{Watershed}
+Works almost identical to \texttt{Grow from seeds}, with the exception that segmentation smoothing factor can be customized via the \texttt{Object scale} setting.
+For usage see: \Cref{section:gfs}.
+
+\pagebreak
+\subsubsection{Local Threshold}
+\begin{figure}[h!]
+	\centerline{
+		\includegraphics[
+			% scale=0.2
+			width=1.1\textwidth
+		]{locThreshold.png}}
+	\caption{Local threshold tool}\label{fig:lt}
+\end{figure}
+\noindent
+ROI based thresholding tool.
+Start by drawing a ROI in the 2D view area (\cref{fig:lt}:4).
+The segmentation algorithm (\cref{fig:lt}:2) will automatically set the lower and upper threshold limit.
+If the segmentation is leaky, reduce the \texttt{Minimum diameter}.
+This will prevent the segmentation algorithm from considering bridged areas with bridges smaller than the specified amount.
+If the watershead algorithm is selected (\cref{fig:lt}:2), \texttt{Feature size} can be used to control the amount of smoothing the algorithm performs.
+If you wish to locally restrict the threshold, create and draw a ROI (\cref{fig:lt}:3) before using the tool.
+
+\section{Performing segmentations}
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\pagebreak
 \begin{figure}[h!] % h - here
 	\centerline{
 		\includegraphics[
