--- a/guide/Titlepage.tex
+++ b/guide/Titlepage.tex
@@ -29,6 +29,16 @@
 	\tabto{2cm}SUPERVISOR: \tabto{7cm}\textbf{Dipl. Ing. Michael Rauter}
 	\tabto{2cm}DATE OF SUBMISSION: \tabto{7cm}\textbf{\today}
 
+	\vspace{15pt}
+
+	\begin{figure}[h!] % h - here
+		\centerline{ % center a single element on page, from: https://tex.stackexchange.com/a/4438
+			\includegraphics[
+				% scale=0.2
+				width=\textwidth
+			]{finalSeg.png}}
+	\end{figure}
+
 	\vfill
 
 	Deutschlandsberg, \today
