--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -2131,3 +2131,12 @@
   abstract = {A systematic approach to creating better documentation. - evildmp/diataxis-documentation-framework},
   file = {/home/ro/Zotero/storage/6AYWGDID/diataxis-documentation-framework.html}
 }
+
+@software{lassoSlicerSegmentEditorExtraEffects2024,
+  title = {{{SlicerSegmentEditorExtraEffects}}},
+  author = {Lasso, Andras},
+  date = {2024-03-05},
+  url = {https://github.com/lassoan/SlicerSegmentEditorExtraEffects},
+  organization = {PerkLab},
+  version = {73432418d98810dbe2c1195d0365b46e9fe23d9f}
+}
