--- a/guide/main.tex
+++ b/guide/main.tex
@@ -14,6 +14,7 @@
 \usepackage{tabto}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.16}
+\usepackage{subcaption}
 \usepackage{graphicx} % u.a. JPGs als Grafiken
 \usepackage[noabbrev]{cleveref}
 \usepackage{svg} % include svg pictures
